<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/welcomeMessage"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/welcome_message" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/studentCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWrite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E0F2F1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/studentCardTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/student_card"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/nameTextWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/input_name"
                android:maxLines="2"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/surnameTextWrite"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:gravity="start"
                android:hint="@string/input_surname"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/facultyWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/input_faculty"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/infoCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWrite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="#E0F2F1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/infoTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:overScrollMode="always"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:text="@string/student_info"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6DACACAC" />

            <ListView
                android:id="@+id/studentInformationList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:padding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#6DACACAC" />

            <EditText
                android:id="@+id/fileNameRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWrite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal"
        android:padding="12dp"
        android:text="@string/add_student"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal"
        android:padding="12dp"
        android:text="@string/show_student"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
